kubernetes/metrics/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics
  namespace: metrics

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: "Host(`metrics.docwhat.net`)"
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: docwhat-auth
          namespace: traefik
